--- a/.gitattributes
+++ b/.gitattributes
@@ -1,29 +1,6 @@
-# Basic .gitattributes for a python repo.
 
-# Source files
-# ============
-*.pxd    text diff=python
-*.py     text diff=python
-*.py3    text diff=python
-*.pyw    text diff=python
-*.pyx    text diff=python
-*.pyz    text diff=python
-*.pyi    text diff=python
-
-# Binary files
-# ============
-*.db     binary
-*.p      binary
-*.pkl    binary
-*.pickle binary
-*.pyc    binary export-ignore
-*.pyo    binary export-ignore
-*.pyd    binary
-
-# Jupyter notebook
-*.ipynb  text eol=lf
-
-# Note: .db, .p, and .pkl files are associated
-# with the python modules ``pickle``, ``dbm.*``,
-# ``shelve``, ``marshal``, ``anydbm``, & ``bsddb``
-# (among others).
+*.csharp linguist-detectable=true  
+*.java linguist-detectable=false  
+*.js linguist-detectable=false  
+*.html linguist-detectable=false  
+*.xml linguist-detectable=false    
