--- a/.gitattributes
+++ b/.gitattributes
@@ -3,4 +3,4 @@
 *.java linguist-detectable=false  
 *.js linguist-detectable=false  
 *.html linguist-detectable=false  
-*.xml linguist-detectable=false    
+*.tex linguist-detectable=false    
